layout bug fix and some design changes.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -206,7 +206,7 @@
     font-weight: 600;
     margin: 1rem 0;
     outline: 0;
-    padding: 2rem 3rem;
+    padding: 2rem 4vw;
     text-align: center;
     text-transform: uppercase;
     white-space: nowrap;
@@ -297,6 +297,7 @@
     border: 0;
     flex-grow: 1;
     padding: 1.5rem 2rem;
+    width: 0;
   }
   
   .input-group .btn {
